--- a/package.json
+++ b/package.json
@@ -2,8 +2,25 @@
   "name": "cookie-banner",
   "version": "1.0.0",
   "description": "GDPR Cookie Banner",
-  "main": "index.js",
-  "repository": "git@github.com:billmn/cookie-banner.git",
-  "author": "Davide Bellini <bellini.davide@gmail.com>",
-  "license": "MIT"
+  "author": "Logistic Design",
+  "license": "MIT",
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "cookieconsent": "3",
+    "cross-env": "^7.0.2",
+    "laravel-mix": "^5.0.4",
+    "merge": "^1.2.1",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
+  }
 }
