Rinominata directory files per la produzione

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/build/cookie-banner.js": "/build/cookie-banner.js",
-    "/build/cookie-banner.css": "/build/cookie-banner.css"
+    "/dist/cookie-banner.js": "/dist/cookie-banner.js",
+    "/dist/cookie-banner.css": "/dist/cookie-banner.css"
 }
