--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "license": "MIT",
   "scripts": {
     "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "mix --production"
   },
   "devDependencies": {
-    "cookieconsent": "3",
-    "cross-env": "^7.0.3",
-    "laravel-mix": "^5.0.9",
-    "merge": "^1.2.1",
+    "cookieconsent": "^3.1.1",
+    "laravel-mix": "^6.0.16",
+    "merge": "^2.1.1",
     "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.2",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1"
   }
 }
